Fixed line breaks on posts Added Post parsing middleware for greentexting and redtexting Removed unescaping in posts messages

--- a/public/css/hispachan.css
+++ b/public/css/hispachan.css
@@ -95,7 +95,7 @@ a:hover {
 	padding:0px;
 	color:#800000;
 }
-.unkfunc {
+.greentext {
 	background:inherit;
 	color:#1A7D24;
 }
