--- a/public/css/img_global.css
+++ b/public/css/img_global.css
@@ -523,6 +523,7 @@ padding-left: 4px;
 
 blockquote {
   word-wrap: break-word;
+  white-space: pre-line;
 }
 
 /* Centramos el post baneado */
